--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 <!--Cabecera de la pagina-->
 		<header class="header">
 			<div class="titulo">
-				
+				<h1>Comenzando con la fotografía</h1>
 			</div>
 			<nav class="nav">
+				<a href="#">Inicio</a>
+				<a href="#">Paisajes</a>
+				<a href="#">Retratos</a>
+				
 			</nav>
 		</header>
 <!--seccion central-->
