--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <!--seccion central-->
 		<section class="section">
 			<div class="seccion1"></div>
-			<div class="seccion2"></div>
+			<div class="seccion2">
+			
+			</div>
 			<div class="seccion3"></div>
 		</section>
 <!--pie de pagina-->
