Arreglo parte central index

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 		</header>
 <!--seccion central-->
 		<section class="section">
-			<div class="seccion1"></div>
-			<div class="seccion2">
-			
+			<div class="seccion1">
+				
 			</div>
-			<div class="seccion3"></div>
+			<div class="seccion2">
+					<img src="img/pexels-photo-414171.jpeg" alt="Imagen Paisaje2">
+			</div>
+			<div class="seccion3">
+					<img src="img/pexels-photo-302549.jpeg" alt="Imagen Paisaje3">
+			</div>
 		</section>
 <!--pie de pagina-->
 		<footer class="footer">
