--- a/index.html
+++ b/index.html
@@ -37,10 +37,23 @@
 		</section>
 <!--pie de pagina-->
 		<footer class="footer">
-			<div class="pie1"></div>
-			<div class="pie2"></div>
-			<div class="pie3"></div>
-			<div class="pie4"></div>
+			<div class="pie1">
+			<h2>Contacto</h2>
+				<br>
+			<a href="mailto:leoroa1806@gmail.com">leoroa1806@gmail.com</a> 
+			<p>Dirección: Calle 160 # 58 58 Bogotá</p>
+			<p>Telefono 3202677615</p>
+			</div>
+			<div class="pie2">
+			<h2>Terminos</h2>
+			</div>
+			<div class="pie3">
+			<h2>Redes Sociales</h2>
+			</div>
+			<div class="pie4">
+			  <h2>Derechos</h2>
+			  <p>Todos los derechos Reservados &reg </p>
+			</div>
 		</footer>
 	</div>
 </body>
