--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			</div>
 			<nav class="nav">
 				<a href="#">Inicio</a>
-				<a href="#">Paisajes</a>
-				<a href="#">Retratos</a>
+				<a href="html/Paisajes.html">Paisajes</a>
+				<a href="html/Retratos.html">Retratos</a>
 				
 			</nav>
 		</header>
@@ -46,6 +46,7 @@
 			</div>
 			<div class="pie2">
 			<h2>Terminos</h2>
+			
 			</div>
 			<div class="pie3">
 			<h2>Redes Sociales</h2>
