Arreglo pie y cuerpo central

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h1>Comenzando con la fotografía</h1>
 			</div>
 			<nav class="nav">
-				<a href="#">Inicio</a>
+				<a href="index.html">Inicio</a>
 				<a href="html/Paisajes.html">Paisajes</a>
 				<a href="html/Retratos.html">Retratos</a>
 				
@@ -30,9 +30,14 @@
 			</div>
 			<div class="seccion2">
 					<img src="img/pexels-photo-414171.jpeg" alt="Imagen Paisaje2">
+					<br>
+					<a href="html/Paisajes.html">Paisajes</a>
 			</div>
 			<div class="seccion3">
 					<img src="img/pexels-photo-302549.jpeg" alt="Imagen Paisaje3">
+					<br>
+					<a href="html/Retratos.html">Retratos</a>
+					
 			</div>
 		</section>
 <!--pie de pagina-->
@@ -46,10 +51,19 @@
 			</div>
 			<div class="pie2">
 			<h2>Terminos</h2>
-			
+			<p>Conoce nuestros terminos y condiciones</p>
 			</div>
 			<div class="pie3">
 			<h2>Redes Sociales</h2>
+			<br>
+			<p>visitanos en nuestras redes sociales</p>
+			<br>
+			<p><img src="img/facebook.png" alt="Facebook" width="15px">Facebook</p>
+			<br>
+			<p><img src="img/Twitter.png" alt="Twitter" width="20px"> Twitter</p>
+			<br>
+			<p><img src="img/youtube.png" alt="Youtube" width="20px">Youtube</p>
+			
 			</div>
 			<div class="pie4">
 			  <h2>Derechos</h2>
