--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
 			<br>
 			<p>visitanos en nuestras redes sociales</p>
 			<br>
-			<p><img src="img/facebook.png" alt="Facebook" width="15px">Facebook</p>
+			<p><img src="img/facebook.png" alt="Facebook" width="15px">  Facebook</p>
 			<br>
-			<p><img src="img/Twitter.png" alt="Twitter" width="20px"> Twitter</p>
+			<p><img src="img/Twitter.png" alt="Twitter" width="20px">  Twitter</p>
 			<br>
-			<p><img src="img/youtube.png" alt="Youtube" width="20px">Youtube</p>
+			<p><img src="img/youtube.png" alt="Youtube" width="20px">  Youtube</p>
 			
 			</div>
 			<div class="pie4">
 			  <h2>Derechos</h2>
 			  <p>Todos los derechos Reservados &reg </p>
+			  <p>Leonardo Fonseca</p>
+			  <p>2018</p>
 			</div>
 		</footer>
 	</div>
