--- a/html/Paisajes.html
+++ b/html/Paisajes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="../css/estilos_paisajes.css">
   <title>Paisajes</title>
 </head>
 <body>
@@ -14,20 +14,36 @@
 <!--Cabecera de la pagina-->
 		<header class="header">
 			<div class="titulo">
-				<h1>Comenzando con la fotografía</h1>
+				<h1>Paisajes</h1>
 			</div>
 			<nav class="nav">
-				<a href="index.html">Inicio</a>
-				<a href="html/Paisajes.html">Paisajes</a>
-				<a href="html/Retratos.html">Retratos</a>
+				<a href="../index.html">Inicio</a>
+				<a href="../html/Paisajes.html">Paisajes</a>
+				<a href="../html/Retratos.html">Retratos</a>
 				
 			</nav>
 		</header>
 <!--seccion central-->
 		<section class="section">
 			<div class="seccion1">
-				
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje1">
 			</div>
+			<div class="seccion2">
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje2">
+			</div>
+			<div class="seccion3">
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje3">
+			</div>
+			<div class="seccion4">
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje4">
+			</div>
+			<div class="seccion5">
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje5">
+			</div>
+			<div class="seccion6">
+					<img src="../img/pexels-photo-414171.jpeg" alt="Paisaje6">
+			</div>
+
 		</section>
 <!--pie de pagina-->
 		<footer class="footer">
@@ -47,11 +63,11 @@
 			<br>
 			<p>visitanos en nuestras redes sociales</p>
 			<br>
-			<p><img src="img/facebook.png" alt="Facebook" width="15px">  Facebook</p>
+			<p><img src="../img/facebook.png" alt="Facebook" width="15px">  Facebook</p>
 			<br>
-			<p><img src="img/Twitter.png" alt="Twitter" width="20px">  Twitter</p>
+			<p><img src="../img/Twitter.png" alt="Twitter" width="20px">  Twitter</p>
 			<br>
-			<p><img src="img/youtube.png" alt="Youtube" width="20px">  Youtube</p>
+			<p><img src="../img/youtube.png" alt="Youtube" width="20px">  Youtube</p>
 			
 			</div>
 			<div class="pie4">
@@ -64,3 +80,4 @@
 	</div>
 </body>
 </html>
+
