--- a/html/Retratos.html
+++ b/html/Retratos.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+  <link rel="stylesheet" href="../css/estilos_retratos.css">
+  <title>Paisajes</title>
 </head>
 <body>
-	Retratos
+<!--Contenedor General-->
+	<div class="principal">
+<!--Cabecera de la pagina-->
+		<header class="header">
+			<div class="titulo">
+				<h1>Retratos</h1>
+			</div>
+			<nav class="nav">
+				<a href="../index.html">Inicio</a>
+				<a href="../html/Paisajes.html">Paisajes</a>
+				<a href="../html/Retratos.html">Retratos</a>
+
+			</nav>
+		</header>
+<!--seccion central-->
+		<section class="section">
+			<div class="seccion1">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje1">
+			</div>
+			<div class="seccion2">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje2">
+			</div>
+			<div class="seccion3">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje3">
+			</div>
+			<div class="seccion4">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje4">
+			</div>
+			<div class="seccion5">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje5">
+			</div>
+			<div class="seccion6">
+					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje6">
+			</div>
+
+		</section>
+<!--pie de pagina-->
+		<footer class="footer">
+			<div class="pie1">
+			<h2>Contacto</h2>
+				<br>
+			<a href="mailto:leoroa1806@gmail.com">leoroa1806@gmail.com</a>
+			<p>Dirección: Calle 160 # 58 58 Bogotá</p>
+			<p>Telefono 3202677615</p>
+			</div>
+			<div class="pie2">
+			<h2>Terminos</h2>
+			<p>Conoce nuestros terminos y condiciones</p>
+			</div>
+			<div class="pie3">
+			<h2>Redes Sociales</h2>
+			<br>
+			<p>visitanos en nuestras redes sociales</p>
+			<br>
+			<p><img src="../img/facebook.png" alt="Facebook" width="15px">  Facebook</p>
+			<br>
+			<p><img src="../img/Twitter.png" alt="Twitter" width="20px">  Twitter</p>
+			<br>
+			<p><img src="../img/youtube.png" alt="Youtube" width="20px">  Youtube</p>
+
+			</div>
+			<div class="pie4">
+			  <h2>Derechos</h2>
+			  <p>Todos los derechos Reservados &reg </p>
+			  <p>Leonardo Fonseca</p>
+			  <p>2018</p>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
+
