Responsive, efectos, animaciones. terminado

--- a/html/Retratos.html
+++ b/html/Retratos.html
@@ -24,26 +24,37 @@
 			</nav>
 		</header>
 <!--seccion central-->
-		<section class="section">
+			<section class="section">
 			<div class="seccion1">
+				<div class="image1">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje1">
+				</div>
 			</div>
 			<div class="seccion2">
+				<div class="image2">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje2">
+				</div>
 			</div>
 			<div class="seccion3">
+				<div class="image3">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje3">
+				</div>
 			</div>
 			<div class="seccion4">
+				<div class="image4">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje4">
+				</div>
 			</div>
 			<div class="seccion5">
+				<div class="image5">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje5">
+				</div>
 			</div>
 			<div class="seccion6">
+				<div class="image6">
 					<img src="../img/pexels-photo-734962.jpeg" alt="Paisaje6">
+				</div>
 			</div>
-
 		</section>
 <!--pie de pagina-->
 		<footer class="footer">
@@ -51,7 +62,7 @@
 			<h2>Contacto</h2>
 				<br>
 			<a href="mailto:leoroa1806@gmail.com">leoroa1806@gmail.com</a>
-			<p>Dirección: Calle 160 # 58 58 Bogotá</p>
+			<p>Dirección: Calle 160 # 58 50 Bogotá</p>
 			<p>Telefono 3202677615</p>
 			</div>
 			<div class="pie2">
